[package]
name = "smart-escrow-wasm-functions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
always_succeed = []
balance_check = []
time_window = []
data_counter = []
oracle_price_check = []
credential_check = []
gas_stress_test = []

[dependencies]
# XRPL WASM standard library for Smart Escrows
xrpl-wasm-stdlib = { git = "https://github.com/ripple/xrpl-wasm-stdlib", branch = "main" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary

[profile.dev]
opt-level = 0
